--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <i class="fa-solid fa-link pe-2"></i>Site URL</label>
       <input type="url" placeholder="Website URL" class="form-control" id="bookmarkURL">
     </div>
-    <button class="btn btn-success btn-submit px-5" onclick="addweb()"  id="submitBtn">Submit</button>
+    <button class="btn btn-success btn-submit px-5" onclick="addweb()"  id="submitBtn">Add</button>
   </div>
   <table class="table mt-4 ">
 <thead class="table-t text-center">
